--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tilemap Demo</title>
     <script src="./lib/phaser.js"></script>
-    <script src="./src/Overworld.js"></script>
+    <script src="./src/play1.js"></script>
     <script src="./src/main.js"></script>
 
 </head>
