--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GFOAT</title>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/title.js"></script>
+
     <script src="./src/play1.js"></script>
+    <script src="./src/play2.js"></script>
     <script src="./src/main.js"></script>
 
 </head>
