--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GFOAT</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+
+</head>
+<body>
+    <script>
+        WebFont.load({
+            google: {
+                families: ['Oranienbaum:400']
+            }
+        });
+    </script>
     <script src="./lib/phaser.js"></script>
     <script src="./src/title.js"></script>
-
     <script src="./src/play1.js"></script>
     <script src="./src/play2.js"></script>
     <script src="./src/main.js"></script>
 
-</head>
-<body>
-    
 </body>
 </html>
