heart animation/loading screen added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         });
     </script>
     <script src="./lib/phaser.js"></script>
+    <script src="./src/load.js"></script>
     <script src="./src/title.js"></script>
     <script src="./src/play1.js"></script>
     <script src="./src/play2.js"></script>
