characters are moving hearts on screen/credit comp

--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <script src="./lib/phaser.js"></script>
     <script src="./src/load.js"></script>
     <script src="./src/title.js"></script>
+    <script src="./src/credits.js"></script>
     <script src="./src/play1.js"></script>
     <script src="./src/yearlater.js"></script>
     <script src="./src/play2.js"></script>
+    <script src="./src/remind.js"></script>
+    <script src="./src/fin.js"></script>
     <script src="./src/main.js"></script>
 
 </body>
